tests/errors/delegate-throws-error-code.vala
errordomain FooError {
	FOO,
	BAR;
}

delegate void FooFunc () throws FooError.BAR;

void main () {
	FooFunc foo = () => {};
	foo ();
}
